[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-token-selector"
dynamic = ["version"]
description = "A token-level interactive text selector for FastHTML with gap, word, and span selection modes, custom key repeat navigation, and HTMX state sync."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml', 'cjm-fasthtml-tailwind', 'cjm-fasthtml-daisyui', 'cjm-fasthtml-keyboard-navigation']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-token-selector"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-token-selector"

[project.entry-points.nbdev]
cjm_fasthtml_token_selector = "cjm_fasthtml_token_selector._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_token_selector.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_token_selector"]

[tool.nbdev]
